--- a/bio.css
+++ b/bio.css
@@ -1,12 +1,16 @@
 body {
 	text-align: left;
-	border-color: #cc0066;
+	/*border-color: #cc0066;
 	border-style: solid;
 	border-radius: 10px;
-	border-width: 4px;
+	border-width: 4px;*/
 	/*margin: 10px;*/
 	margin-top: 1%;
 	padding-bottom: 3%;
+}
+
+h2 {
+	font-family: "Satisfy", serif;
 }
 
 
@@ -14,4 +18,8 @@ p {
 	margin-left: 20%;
 	margin-right: 20%;
 	text-align: center;
+}
+
+#divbar {
+	margin: 0 auto;
 }
